--- a/package.json
+++ b/package.json
@@ -58,17 +58,14 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": ">=7",
-    "lint-staged": ">=10"
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3"
   },
   "main": "index.js",
   "repository": "https://github.com/DDD-Community/jsonWeb-front.git",
   "author": "jmpark-dev <fierce.unarmed_0l@icloud.com>",
   "license": "MIT",
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
