--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@tanstack/react-query": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -65,6 +63,11 @@
   "repository": "https://github.com/DDD-Community/jsonWeb-front.git",
   "author": "jmpark-dev <fierce.unarmed_0l@icloud.com>",
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix"
   }
