--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "*.{js,ts,tsx}": [
       "yarn lint-fix:prettier",
       "yarn lint-fix:eslint"
-    ]
+    ],
+    "*.js": "eslint --cache --fix"
   },
   "eslintConfig": {
     "extends": [
