--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
       - setting/*
       - fix/*
       - doc
+    pull_request:
+      - feat/*
+      - setting/*
+      - fix/*
+      - doc
 jobs:
   build:
     runs-on: ubuntu-latest
