--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,13 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "no-use-before-define": [
+      "error",
+      { "variables": false, "functions": false, "classes": false }
+    ],
     "import/extensions": "off",
     "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
