--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
+    "react/jsx-no-undef": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
