--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,18 @@ jobs:
 
       - name: Build
         run: yarn build
+
+  cypress-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: E2E test - chrome
+        uses: cypress-io/github-action@v4
+        with:
+          start: yarn start
+          browser: chrome
