--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
+    "slick-carousel": "^1.8.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.0.1",
