* #24 feat(main): 메인페이지 UI 구현
- ui 구현
- 웹폰트 적용
- 글로벌 스타일 추가

* #24 feat(main): 콘솔 삭제

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "import/prefer-default-export": "off",
     "react/jsx-no-undef": "off",
     "react/react-in-jsx-scope": "off",
+    "react/require-default-props": "off",
     "react/jsx-filename-extension": [
       1,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
