--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,10 @@ jobs:
       - name: E2E test - chrome
         uses: cypress-io/github-action@v4
         with:
+          install: false
           start: yarn start
           browser: chrome
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          
