--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,18 @@ jobs:
         run: yarn
 
       - name: E2E test - chrome
-        uses: cypress-io/github-action@v4
+        uses: cypress-io/github-action@v5.0.2
         with:
+          install: false
           start: yarn start
           browser: chrome
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          
+  check-bundle-size:
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v2
+      - uses: preactjs/compressed-size-action@v2
+          
