--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
       - fix/*
       - doc
 jobs:
-  build:
+  run-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code.
@@ -30,7 +30,31 @@ jobs:
       - name: Build
         run: yarn build
 
-  cypress-test:
+  run-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Caching dependencies
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Check lint prettier
+        run: yarn lint-fix:prettier
+        
+      - name: Check lint eslint
+        run: yarn lint-fix:eslint
+
+  run-cypress-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -49,7 +73,7 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           
-  check-bundle-size:
+  run-bundle-analysis:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v2
