--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://exitnow.netlify.app",
   "browserslist": {
     "production": [
       ">0.2%",
