--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.3",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
+    "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -79,6 +80,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "framer-motion": "^8.0.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.8.0"
   }
