--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@sentry/react": "^7.30.0",
+    "@sentry/tracing": "^7.30.0",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
