--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@swc/cli": "0.1.59",
     "@swc/core": "1.3.27",
     "@swc/helpers": "0.4.14",
     "@types/react-slick": "^0.23.10",
