--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     ]
   },
   "devDependencies": {
+    "@swc/cli": "0.1.59",
+    "@swc/core": "1.3.27",
+    "@swc/helpers": "0.4.14",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
@@ -90,6 +93,7 @@
     "framer-motion": "^8.0.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "swc-loader": "0.2.3"
   }
 }
