--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.1",
     "react-hotjar": "5.4.1",
+    "react-query": "3.39.3",
+    "react-query-devtools": "2.6.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
