--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/styled": "^11.10.5",
     "@sentry/react": "^7.30.0",
     "@sentry/tracing": "^7.30.0",
+    "@tanstack/react-query": "4.23.0",
+    "@tanstack/react-query-devtools": "4.23.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,8 +28,6 @@
     "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.1",
     "react-hotjar": "5.4.1",
-    "react-query": "3.39.3",
-    "react-query-devtools": "2.6.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
