--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@emotion/styled": "^11.10.5",
     "@sentry/react": "^7.30.0",
     "@sentry/tracing": "^7.30.0",
-    "@tanstack/react-query": "^4.16.1",
-    "@tanstack/react-query-devtools": "^4.20.4",
+    "@tanstack/react-query": "4.23.0",
+    "@tanstack/react-query-devtools": "4.23.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
